2013-12-26  Luke Bryan <cobcoder@users.sourceforge.net>

   * strings.c : Fix Unstring delimited by all delimiter
                 size > 1 issue, see bug #54.

2013-12-07  Brian Tiffin <btiffin@gnu.org>

   * call.c, common.c : Unused, set-notused parameter warning removal

2013-10-16  Luke Bryan <luke.bryan92@yahoo.com> 

   * screenio.c : Extended Accept insert key:
                     Changed insert key default to off. 
                     Added environment variable COB_INSERT_MODE, Y or y insert default becomes on. 

2013-01-16  Sergey Kashyrin <ska@kiska.net>

   * fileio.c : Fix problem to rewrite INDEXED (VBISAM) record with alternate key.

2012-10-26  Sergey Kashyrin <ska@kiska.net>

   * intrinsic.c : cob_intr_integer was crashing on large-scale numbers.

2012-10-24  Sergey Kashyrin <ska@kiska.net>

   * intrinsic.c : Prevent cob_intr_binop to use double (float) and loose precision (bug #37).

2012-10-23  Sergey Kashyrin <ska@kiska.net>

   * fileio.c : Prevent runtime crash when ASSIGN is missing in SELECT FILE.
                (well, it's better to fix the parser to give an error, but meanwhile...)

2012-08-30  Luke Bryan <lukebryan@bdumail.com>

   * screenio.c : Added for extended Accept: 
                      Tab = 2007 return code. 
                      Back tab = 2008 return code. 
                      Insert key (the default is on). 
                      Delete key. 
                  Enhanced for extended Accept: 
                      End key to end of data (was end of field). 
                      Backspace key moves remainder left (inserts space at end or 0 for numerics). 

2012-07-12  Sergey Kashyrin <ska@kiska.net>

   * numeric.c : cob_add_packed bug fix.
                 http://www.opencobol.org/modules/newbb/viewtopic.php?topic_id=1487&forum=1
                 SUBTRACT int FROM PIC S9(n)V9(m) COMP-3 was giving wrong negative result

2012-06-26  Sergey Kashyrin <ska@kiska.net>

   * numeric.c : cob_display_add_int bug fixed.