@@ -2369,15 +2369,14 @@ cob_intr_random (const int params, ...)
 {
 	cob_field	*f;
 	va_list		args;
-	int		seed = 1;
+	double		val;
+	int		seed;
 	int		randnum;
-	int		i;
-	int		exp10;
 	cob_field_attr	attr;
 	cob_field	field;
 
-	COB_ATTR_INIT (COB_TYPE_NUMERIC_BINARY, 18, 9, COB_FLAG_HAVE_SIGN, NULL);
-	COB_FIELD_INIT (8, NULL, &attr);
+	COB_ATTR_INIT (COB_TYPE_NUMERIC_DOUBLE, 20, 9, COB_FLAG_HAVE_SIGN, NULL);
+	COB_FIELD_INIT (sizeof(double), NULL, &attr);
 	va_start (args, params);
 
 	if (params) {
@@ -2399,19 +2398,9 @@ cob_intr_random (const int params, ...)
 #else
 	randnum = rand ();
 #endif
-	exp10 = 1;
-	for (i = 0; i < 10; ++i) {
-		if ((randnum / exp10) == 0) {
-			break;
-		}
-		exp10 *= 10;
-	}
-	if (i == 0) {
-		i = 1;
-	}
-	attr.scale = i;
 	make_field_entry (&field);
-	*(long long *)curr_field->data = (long long)randnum;
+	val = (double)randnum / (double)RAND_MAX;
+	memcpy (curr_field->data, &val, sizeof(val));
 	return curr_field;
 }
 
